# copilot_mpc_server

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  Makefile  README.md  config.yaml  fix.md  install-copilot-agent.sh  pyproject.toml
.claude/agents/: copilotcodereview.md  copilotsecurity.md  copilotsimple.md
src/: copilot_mcp_server.py  copilot_wrapper.sh  redact.py
src/copilot_mcp_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_installer.sh  test_mcp_server.py  test_wrapper.sh
